[tool.poetry]
name = "python-rl-learning"
version = "0.1.0"
description = ""
authors = ["xluox <wdljwan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.10.0"
stable-baselines3 = "^1.1.0"
tensorboard = "^2.7.0"
wandb = "^0.12.6"
pyglet = "^1.5.19"
gym = "^0.21.0"
opencv-python = "^4.5.3"

# Atari-related dependencies
atari-py = {version = "0.2.6", optional = true}
ale-py = {version = "^0.7", optional = true}
AutoROM = {version = "^0.3.1", optional = true}
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
atari = ["ale-py", "AutoROM"]
# atari = ["atari-py"]
pybullet = ["pybullet"]